k8s/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jeopardy
  namespace: jeopardy
  labels:
    app: jeopardy
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jeopardy
  template:
    metadata:
      labels:
        app: jeopardy
        version: 1.0.0
    spec:
      containers:
      - name: jeopardy
        image: nginx:alpine
        volumeMounts:
        - name: src-code
          mountPath: /usr/share/nginx/html/jeopardy
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
      volumes:
      - name: src-code
        emptyDir: {}
