k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jeopardy
  namespace: jeopardy
spec:
  selector:
    app: jeopardy
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 80
  type: NodePort
