k8s/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: jeopardy
  namespace: jeopardy
spec:
  rules:
  - host: raspberrypi
    http:
      paths:
      - backend:
          service:
            name: jeopardy
            port: 
              number: 3000
        path: /jeopardy
        pathType: Prefix
  - host: audioboxer.onthewifi.com
    http:
      paths:
      - backend:
          service:
            name: jeopardy
            port: 
              number: 3000
        path: /jeopardy
        pathType: Prefix
